--- a/config.json.template
+++ b/config.json.template
@@ -2,5 +2,9 @@
 	"consumer_key": "",
 	"consumer_secret": "",
 	"access_token_key": "",
-	"access_token_secret": ""
+	"access_token_secret": "",
+	companies : [
+		{"$AAPL" : "Apple Inc."},
+		{"$MSFT": "Microsoft Corporation"}
+	]
 }
